[package]
name = "cyberscript"
version = "0.0.0"
edition = "2021"
description = "TODO: Rust bindings to the Cyber scripting language."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "simple"
path = "examples/simple.rs"

[dependencies]
cyberscript-sys = { path = "cyberscript-sys" }
